openshiftnew_backend/app-route-backend.yaml
apiVersion: v1
kind: Route
metadata:
  name: backend
spec:
  host: witi.backend.appsrvdev2.conygre.com
  port:
    targetPort: '8085'
  to:
    kind: Service
    name: backend
